--- a/home_screen_images.qrc
+++ b/home_screen_images.qrc
@@ -1,5 +1,10 @@
 <RCC>
     <qresource prefix="/home_screen/background">
         <file>Bitmaps/home_screen/0569-bg_1_home.png</file>
+        <file>Bitmaps/home_screen/ic_tab_connect.png</file>
+        <file>Bitmaps/home_screen/ic_tab_favourite.png</file>
+        <file>Bitmaps/home_screen/ic_tab_media.png</file>
+        <file>Bitmaps/home_screen/ic_tab_settings.png</file>
+        <file>Bitmaps/home_screen/bg_panel_mid.png</file>
     </qresource>
 </RCC>
