--- a/ui/homescreen.ui
+++ b/ui/homescreen.ui
@@ -52,7 +52,7 @@
       <number>0</number>
      </property>
      <item row="0" column="0">
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="favourite_button">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
          <horstretch>0</horstretch>
@@ -84,7 +84,7 @@ background-color: rgba(255, 255, 255, 50);
       </widget>
      </item>
      <item row="0" column="2">
-      <widget class="QPushButton" name="pushButton_2">
+      <widget class="QPushButton" name="media_button">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
          <horstretch>0</horstretch>
@@ -119,7 +119,7 @@ background-color: rgba(255, 255, 255, 50);
       </widget>
      </item>
      <item row="0" column="3">
-      <widget class="QPushButton" name="pushButton_3">
+      <widget class="QPushButton" name="connect_button">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
          <horstretch>0</horstretch>
@@ -148,7 +148,7 @@ background-color: rgba(255, 255, 255, 50);
       </widget>
      </item>
      <item row="0" column="5">
-      <widget class="QPushButton" name="pushButton_4">
+      <widget class="QPushButton" name="settings_button">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
          <horstretch>0</horstretch>
@@ -178,7 +178,102 @@ background-color: rgba(255, 255, 255, 50);
      </item>
     </layout>
    </widget>
-   <widget class="QPushButton" name="pushButton_5">
+   <widget class="QWidget" name="horizontalLayoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>340</x>
+      <y>0</y>
+      <width>111</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <property name="spacing">
+      <number>0</number>
+     </property>
+     <item>
+      <widget class="QLabel" name="hour1_clock">
+       <property name="maximumSize">
+        <size>
+         <width>14</width>
+         <height>33</height>
+        </size>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="hour2_clock">
+       <property name="maximumSize">
+        <size>
+         <width>14</width>
+         <height>33</height>
+        </size>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="semicolon">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>8</width>
+         <height>33</height>
+        </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">border-image: url(:/home_screen/background/Bitmaps/home_screen/Semicolon.png);</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="minute1_clock">
+       <property name="maximumSize">
+        <size>
+         <width>14</width>
+         <height>33</height>
+        </size>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="minute2_clock">
+       <property name="maximumSize">
+        <size>
+         <width>14</width>
+         <height>33</height>
+        </size>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QLabel" name="status_bar">
     <property name="geometry">
      <rect>
       <x>0</x>
@@ -187,16 +282,71 @@ background-color: rgba(255, 255, 255, 50);
       <height>60</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">background-image: url(:/home_screen/background/Bitmaps/home_screen/bg_line_statusbar.png);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>80</y>
+      <width>194</width>
+      <height>294</height>
+     </rect>
+    </property>
     <property name="focusPolicy">
      <enum>Qt::NoFocus</enum>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton {
-background-image: url(:/home_screen/background/Bitmaps/home_screen/bg_line_statusbar.png);
-}
-QPushButton::pressed {
-background-color: rgba(255, 255, 255, 0);
-}</string>
+     <string notr="true">background-image: url(:/home_screen/background/Bitmaps/home_screen/bg_panel_small.png);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="flat">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_2">
+    <property name="geometry">
+     <rect>
+      <x>584</x>
+      <y>80</y>
+      <width>194</width>
+      <height>294</height>
+     </rect>
+    </property>
+    <property name="focusPolicy">
+     <enum>Qt::NoFocus</enum>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-image: url(:/home_screen/background/Bitmaps/home_screen/bg_panel_small.png);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="flat">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_3">
+    <property name="geometry">
+     <rect>
+      <x>185</x>
+      <y>60</y>
+      <width>430</width>
+      <height>330</height>
+     </rect>
+    </property>
+    <property name="focusPolicy">
+     <enum>Qt::NoFocus</enum>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-image: url(:/home_screen/background/Bitmaps/home_screen/bg_panel_mid.png);</string>
     </property>
     <property name="text">
      <string/>
