--- a/home_screen_images.qrc
+++ b/home_screen_images.qrc
@@ -41,5 +41,6 @@
         <file>Bitmaps/home_screen/ic_range_fuel.png</file>
         <file>Bitmaps/home_screen/ic_fuel_small.png</file>
         <file>Bitmaps/home_screen/art_vehicle_info_fuel.png</file>
+        <file>Bitmaps/home_screen/art_album_default.png</file>
     </qresource>
 </RCC>
