--- a/ui/homescreen.ui
+++ b/ui/homescreen.ui
@@ -339,6 +339,19 @@ background-color: rgba(255, 255, 255, 50);
      <property name="styleSheet">
       <string notr="true"/>
      </property>
+     <widget class="QLabel" name="label">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>170</width>
+        <height>170</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="mainFrameUppeRightWidget" native="true">
      <property name="geometry">
